Añadir a Series a Listas: - Se permite añadir las series a las 4 listas diferentes desde la vista individual de cada serie - El ID de SerieLista se crea manualmente (S + ID_SERIE + L + ID_LISTA) para evitar duplicados - Se crea botón de Empezar Serie en la vista de serie para añadirla a series_viendo - TODO: contador episodios y temporadas

--- a/assets/styles/perfil.css
+++ b/assets/styles/perfil.css
@@ -146,6 +146,11 @@
     width: 26.5vh;
   }
   
+  .flex-container-series.viendo-container img {
+    border: 1px solid var(--viendo);
+    border-radius: 4px;
+  }
+
   .flex-container-series.visto-container img {
     border: 1px solid var(--visto);
     border-radius: 4px;
@@ -157,7 +162,8 @@
   }
   
   .flex-container-series.favorito-container img {
-    border: 1px solid var(--favorito);
+    background: var(--favorito);
+    border: 1px solid transparent;
     border-radius: 4px;
   }
   
