--- a/templates/serie/views/showSerie.html.twig
+++ b/templates/serie/views/showSerie.html.twig
@@ -93,10 +93,14 @@
           />
           <!-- TODO: Añadir/Eliminar de listas dependiendo del estado: -->
           <!-- TODO: Hacer excluyente estado visto y por ver: -->
+          <!-- TODO: Cambiar icono según estado: -->
           <div class="estado-serie">
-            <i class="bi bi-eye icono-visto" id="icono-visto"></i>
-            <i class="bi bi-bookmark icono-por-ver" id="icono-por-ver"></i>
-            <i class="bi bi-heart icono-favorito" id="icono-favorito"></i>
+            <a href="{{ path('add_lista_vista', {'id': id_serie}) }}"><i class="bi bi-eye icono-visto" id="icono-visto"></i></a>
+            <a href="{{ path('add_lista_por_ver', {'id': id_serie}) }}"><i class="bi bi-bookmark icono-por-ver" id="icono-por-ver"></i></a> 
+            <a href="{{ path('add_lista_favorita', {'id': id_serie}) }}"><i class="bi bi-heart icono-favorito" id="icono-favorito"></i></a>
+          </div>
+          <div class="empezar-serie">
+            <a href="{{ path('add_lista_viendo', {'id': id_serie}) }}">Empezar Serie</a>
           </div>
           <div class="info-basica">
             <div>
@@ -242,4 +246,5 @@
 {% block javascripts %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="{{ asset('app.js') }}"></script>
+<script src="{{ asset('serie-lista.js') }}"></script>
 {% endblock %}
