Eliminar Series de Listas: - Se crea un botón con un icono de papelera debajo de cada serie - El botón accede a un método que elimina la serie de la lista según la vista del usuario. Ej:    - Si el usuario está en la vista series_favoritas y elimina una serie, la serie see borrará únicamente de esa lista

--- a/assets/styles/perfil.css
+++ b/assets/styles/perfil.css
@@ -111,7 +111,6 @@
     flex-direction: row;
     justify-content: space-around;
     width: 100%;
-    margin-bottom: 6vh;
   }
   
   .flex-container-listas .contenedor-listas a {
@@ -144,6 +143,7 @@
   .flex-container-series div {
     margin: 14px;
     width: 26.5vh;
+    margin-top: 4.5vh;
   }
   
   .flex-container-series.viendo-container img {
@@ -176,6 +176,26 @@
     cursor: pointer;
     width: 100%;
   }
+
+  .flex-container-series div .contenedor-eliminar {
+    position: absolute;
+    width: 4vh;
+    height: 4vh;
+    background-color: var(--eliminar);
+    border: 1px solid #fff;
+    border-radius: 4px;    
+    cursor: pointer;
+    margin-top: 5px;
+    margin-left: 0;
+  }
+
+  .flex-container-series div .eliminar-serie {
+    position: relative;
+    top: 18%;
+    left: 29%;
+  }
+  
+
   
   @media screen and (max-width: 1024px) {
     section.section-perfil {
