--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -10,6 +10,7 @@
   --viendo: #efcc31;
   --por-ver: #64ade9;
   --favorito: linear-gradient(rgb(250, 53, 53), #f058d1);
+  --eliminar: #e22929;
 }
 
 /* General: */
