Series Home Dinámico: - Las series mostradas en Home (viendo y por_ver) aparecen ahora de forma dinámica dependiendo del usuario - El apartado de series por ver mostrará un máximo de 6 series

--- a/templates/page/home/home.html.twig
+++ b/templates/page/home/home.html.twig
@@ -87,7 +87,7 @@
       <div class="flex-container viendo-container">
 
         <!-- TODO: where lista = series_viendo -->
-        {% for serie in array_series %}
+        {% for serie in array_series_viendo %}
         <div>
           <a href="{{ path('mostrar_serie_id', {'id': serie.id}) }}">
             <img
@@ -105,7 +105,7 @@
       <div class="flex-container por-ver-container">
 
         <!-- TODO: where lista = series_por_ver -->
-        {% for serie in array_series %}
+        {% for serie in array_series_por_ver|slice(0, 6) %}
         <div>
           <a href="{{ path('mostrar_serie_id', {'id': serie.id}) }}">
             <img
