--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -1,4 +1,4 @@
-/* Cards: */
+/** Container Series: */
 .flex-container {
   display: flex;
   flex-flow: row wrap;
@@ -13,16 +13,6 @@
   width: 26.5vh;
 }
 
-.flex-container.viendo-container img {
-  border: 1px solid var(--viendo);
-  border-radius: 4px;
-}
-
-.flex-container.por-ver-container img {
-  border: 1px solid var(--por-ver);
-  border-radius: 4px;
-}
-
 .flex-container div img {
   width: 100%;
   height: 100%;
@@ -32,3 +22,68 @@
   cursor: pointer;
   width: 100%;
 }
+
+/** Viendo: */
+.flex-container.viendo-container img {
+  border: 1px solid var(--viendo);
+  border-radius: 4px;
+}
+
+/** Por Ver: */
+.flex-container.por-ver-container img {
+  border: 1px solid var(--por-ver);
+  border-radius: 4px;
+}
+
+.flex-container.por-ver-container div  {
+  margin-bottom: 8vh;
+}
+
+.flex-container.por-ver-container .empezar-serie {
+  position: absolute;
+  text-align: center;
+}
+
+.flex-container.por-ver-container .empezar-serie p {
+  text-decoration: none;
+  background: linear-gradient(0.25turn, var(--viendo), #fff);
+  color: #000;
+  padding: 1.1vh;
+  width: 20vh;
+  height: 5vh;
+  font-size: 16px;
+  border: 1px solid #000;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 1.8vh;
+}
+
+/** Destacados: */
+.flex-container.destacados-container img {
+  border: 1px solid #fff;
+  border-radius: 4px;
+}
+
+.flex-container.destacados-container div  {
+  margin-bottom: 8vh;
+}
+
+.flex-container.destacados-container .seguir-serie {
+  position: absolute;
+  text-align: center;
+}
+
+.flex-container.destacados-container .seguir-serie p {
+  text-decoration: none;
+  background: linear-gradient(0.25turn, var(--por-ver), #fff);
+  color: #000;
+  padding: 1.1vh;
+  width: 20vh;
+  height: 5vh;
+  font-size: 16px;
+  border: 1px solid #000;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 1.8vh;
+}
+
