--- a/templates/page/destacados/destacados.html.twig
+++ b/templates/page/destacados/destacados.html.twig
@@ -9,10 +9,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,600&display=swap" rel="stylesheet"/>
 <link rel="stylesheet" type="text/css" href="{{ asset('styles/styles.css') }}">
-<link rel="stylesheet" type="text/css" href="{{ asset('styles/perfil.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ asset('styles/home.css') }}">
 {% endblock %}
 
-{% block title %}Perfil{% endblock %}
+{% block title %}Inicio{% endblock %}
 
 {% block body %}
     <!-- NAVBAR: -->
@@ -38,10 +38,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="{{ path('home') }}">Inicio</a>
+              <a class="nav-link"  href="{{ path('home') }}">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link activo" aria-current="page" href="{{ path('perfil') }}">Perfil</a>
+              <a class="nav-link" href="{{ path('perfil') }}">Perfil</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ path('seguimiento') }}"
@@ -49,7 +49,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ path('destacados') }}">Destacados</a>
+              <a class="nav-link activo" aria-current="page" href="{{ path('destacados') }}">Destacados</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">Buscar</a>
@@ -80,74 +80,31 @@
         </div>
       </div>
     </nav>
-    <!-- SECCIÓN: -->
-    <div class="flex-container">
-      <aside class="aside-perfil">
-        <div class="flex-container-stats">
-          <img src="{{ asset('img/monke-pfp.png') }}" alt="Foto perfil" />
-          <p class="nombre-usuario"><i>{{ nombre_usuario }}</i></p>
 
-          <div class="info-basica">
-            <div>
-              <!-- TODO: enlace a lista -->
-              <p class="titulo-info">Series Vistas</p>
-              <p class="numero-series">{{ stats[0] }}</p>
-            </div>
-            <div>
-              <!-- TODO: enlace a lista -->
-              <p class="titulo-info">Series por ver</p>
-              <p class="numero-series">{{ stats[1] }}</p>
-            </div>
-            <div>
-              <!-- TODO: enlace a lista -->
-              <p class="titulo-info">Favoritos</p>
-              <p class="numero-series">{{ stats[2] }}</p>
-            </div>
-            <div>
-              <p class="titulo-info">Géneros más vistos</p>
-              <!-- TOP 4 GÉNEROS: -->
-              <ul>
-                <li>Suspense</li>
-                <li>Acción</li>
-                <li>Drama</li>
-                <li>Terror</li>
-              </ul>
-            </div>
+    <!-- SECCIÓN VIENDO: -->
+    <section class="contenedor-pagina">
+      <h1 class="titulo-pagina">Series Destacadas</h1>
+      <div class="flex-container destacados-container">
+      
+        {% for serie in array_series %}
+        <div>
+          <a href="{{ path('mostrar_serie_id', {'id': serie.id}) }}">
+            <img
+                src="{{ asset(serie.posterSrc) }}"
+                class="card-img-top"
+                alt="..."
+            />
+          </a>
+          <a href="{{ path('add_lista_por_ver_d', {'id': serie.id}) }}">
+          <div class="seguir-serie">
+            <p>Añadir a Seguimiento</p>         
           </div>
+          </a>
         </div>
-      </aside>
-      <section class="section-perfil">
-        <div class="flex-container-listas">
-          <div class="contenedor-listas">
-            <a href="{{ path('perfil_browse_lista', {'tipo_lista': 'series_viendo', 'activo': 'activo_s_viendo'}) }}"><p class="titulo-lista activo_s_viendo">Series Viendo</p></a>
-            <a href="{{ path('perfil_browse_lista', {'tipo_lista': 'series_por_ver', 'activo': 'activo_s_por_ver'}) }}"><p class="titulo-lista">Series Por Ver</p></a>
-            <a href="{{ path('perfil_browse_lista', {'tipo_lista': 'series_vistas', 'activo': 'activo_s_vistas'}) }}"><p class="titulo-lista">Series Vistas</p></a>
-            <a href="{{ path('perfil_browse_lista', {'tipo_lista': 'series_favoritas', 'activo': 'activo_s_favoritas'}) }}"><p class="titulo-lista">Favoritos</p></a>
-          </div>
-          <!-- TODO: Editar lista-container según el estado de la serie: -->
-          <div class="flex-container-series viendo-container">
-          
-            <!-- TODO: where lista = series_viendo -->
-            {% for serie in array_series %}
-              <div>
-                <a href="{{ path('mostrar_serie_id', {'id': serie.id}) }}">
-                  <img
-                      src="{{ asset(serie.posterSrc) }}"
-                      class="card-img-top"
-                      alt="..."
-                  />
-                </a>
-                <a href="{{ path('remove_serie_lista', {'id': serie.id, 'tipo_lista': 'viendo-container'}) }}">
-                  <div class="contenedor-eliminar">
-                    <i class="bi bi-trash3 eliminar-serie"></i>
-                  </div>
-                </a>    
-              </div>
-            {% endfor %}
+        {% endfor %}
 
-        </div>
-      </section>
-    </div>
+      </div>
+    </section>
 
     <!-- Pie de pagina (footer) -->
     <footer>
