--- a/templates/page/perfil/perfilListas.html.twig
+++ b/templates/page/perfil/perfilListas.html.twig
@@ -49,7 +49,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Destacados</a>
+              <a class="nav-link" href="{{ path('destacados') }}">Destacados</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">Buscar</a>
