--- a/templates/serie/views/showAllSeries.html.twig
+++ b/templates/serie/views/showAllSeries.html.twig
@@ -44,12 +44,12 @@
               <a class="nav-link" href="{{ path('perfil') }}">Perfil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=""
+              <a class="nav-link" href="{{ path('seguimiento') }}"
                 >Lista de Seguimiento</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Destacados</a>
+              <a class="nav-link" href="{{ path('destacados') }}">Destacados</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">Buscar</a>
