--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -29,6 +29,31 @@
   border-radius: 4px;
 }
 
+.flex-container.viendo-container .info-capitulo {
+  position: absolute;
+  text-align: center;
+}
+
+.flex-container.viendo-container .info-capitulo p {
+  text-decoration: none;
+  background: linear-gradient(0.25turn, var(--viendo), #fff);
+  color: #000;
+  width: 20vh;
+  height: 5vh;
+  font-size: 16px;
+  border: 1px solid #000;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 1.8vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.flex-container.viendo-container .info-capitulo i {
+  font-size: 22px;
+}
+
 /** Por Ver: */
 .flex-container.por-ver-container img {
   border: 1px solid var(--por-ver);
@@ -46,9 +71,8 @@
 
 .flex-container.por-ver-container .empezar-serie p {
   text-decoration: none;
-  background: linear-gradient(0.25turn, var(--viendo), #fff);
+  background: linear-gradient(0.25turn, var(--por-ver), #fff);
   color: #000;
-  padding: 1.1vh;
   width: 20vh;
   height: 5vh;
   font-size: 16px;
@@ -56,6 +80,9 @@
   border-radius: 5px;
   cursor: pointer;
   margin-left: 1.8vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /** Destacados: */
@@ -75,9 +102,8 @@
 
 .flex-container.destacados-container .seguir-serie p {
   text-decoration: none;
-  background: linear-gradient(0.25turn, var(--por-ver), #fff);
+  background: linear-gradient(0.25turn, var(--bg-color-info), #fff);
   color: #000;
-  padding: 1.1vh;
   width: 20vh;
   height: 5vh;
   font-size: 16px;
@@ -85,5 +111,8 @@
   border-radius: 5px;
   cursor: pointer;
   margin-left: 1.8vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
