Index (/) & Ajustes Listas: - Se hace que la direccion por defecto del servidor symfony (/) haga un logout -> login - Funcionalidad para que si se empieza una serie ("series_viendo") que se encuentra en "series_por_ver" se elimine de esta lista - Botón cerrar sesión en página de manager

--- a/templates/manager/manager.html.twig
+++ b/templates/manager/manager.html.twig
@@ -31,6 +31,7 @@
         {% set dataGenero = {nombre: generoArray[0]|trim, num: generoArray[1]|trim} %}
         {% set data = data|merge([dataGenero]) %}
     {% endfor %}
+    <a href="{{ path('app_logout') }}">Cerrar Sesión</a>
 
     <div class="contenedor-grafico">
         <h2>Géneros más frecuentes:</h2><br>    
